hphp/test/slow/typed_locals/enforce_assign.php.expectf
Catchable fatal error: Expected string, got int in %s/hphp/test/slow/typed_locals/enforce_assign.php on line 7
